--- a/Instructions/HeroesOfPymoli/.ipynb
+++ b/Instructions/HeroesOfPymoli/.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
        "0            576"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
        "4                                       Fury   1.44  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
        "0                     179         $3.05                  780     $2,379.77"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +382,7 @@
        "Other / Non-Disclosed           11                 1.91%"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,61 +423,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "#Get amount of purchases\n",
-    "purchases = purchase_data.groupby('Gender')[\"Purchase ID\"].count()\n",
-    "\n",
-    "#Get avg Purchase price\n",
-    "avg_purchase_price = purchase_data.groupby('Gender')['Price'].mean()\n",
-    "\n",
-    "#get purchase total\n",
-    "purchase_total = purchase_data.groupby('Gender')['Price'].sum()\n",
-    "\n",
-    "#divide by gender\n",
-    "purchase_by_gender = purchase_total/gen*100\n",
-    "\n",
-    "#create dataframe\n",
-    "purchases_df = pd.DataFrame({'Purchase Count':purchases, 'Average Purchase Price':avg_purchase_price,\n",
-    "                            'Total Purchase Value':purchase_total, 'Avg Total Purchase per Person': purchase_by_gender})\n",
-    "purchases_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.series.Series'>\n",
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "float64\n",
-      "Total Count               int64\n",
-      "Percentage of Players    object\n",
-      "dtype: object\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(type(purchase_total))\n",
-    "print(type(gen))\n",
-    "print(purchase_total.dtype)\n",
-    "print(gen.dtypes)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "scrolled": true
-   },
    "outputs": [
     {
      "data": {
@@ -540,11 +487,11 @@
        "</div>"
       ],
       "text/plain": [
-       "                      Purchase Count Average Purchase Price  \\\n",
-       "Gender                                                        \n",
-       "Female                           113                  $3.20   \n",
-       "Male                             652                  $3.02   \n",
-       "Other / Non-Disclosed             15                  $3.35   \n",
+       "                       Purchase Count Average Purchase Price  \\\n",
+       "Gender                                                         \n",
+       "Female                            113                  $3.20   \n",
+       "Male                              652                  $3.02   \n",
+       "Other / Non-Disclosed              15                  $3.35   \n",
        "\n",
        "                      Total Purchase Value Avg Total Purchase per Person  \n",
        "Gender                                                                    \n",
@@ -553,12 +500,35 @@
        "Other / Non-Disclosed               $50.19                         $4.56  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "#Get amount of purchases\n",
+    "purchases = purchase_data.groupby('Gender')[\"Purchase ID\"].count()\n",
+    "\n",
+    "#Get avg Purchase price\n",
+    "avg_purchase_price = purchase_data.groupby('Gender')['Price'].mean()\n",
+    "\n",
+    "#get purchase total\n",
+    "purchase_total = purchase_data.groupby('Gender')['Price'].sum()\n",
+    "\n",
+    "#divide by gender\n",
+    "purchase_by_gender = avg_purchase_total/gen['Total Count']\n",
+    "purchase_by_gender\n",
+    "\n",
+    "#create dataframe\n",
+    "purchases_df = pd.DataFrame({'Purchase Count':purchases, 'Average Purchase Price':avg_purchase_price,\n",
+    "                            'Total Purchase Value':purchase_total, 'Avg Total Purchase per Person': purchase_by_gender})\n",
+    "#place $\n",
+    "purchases_df['Average Purchase Price'] = purchases_df['Average Purchase Price'].map('${:.2f}'.format)\n",
+    "purchases_df['Total Purchase Value'] = purchases_df['Total Purchase Value'].map('${:,.2f}'.format)\n",
+    "purchases_df['Avg Total Purchase per Person'] = purchases_df['Avg Total Purchase per Person'].map('${:,.2f}'.format)\n",
+    "purchases_df\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -681,7 +651,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "C"
+   ]
   },
   {
    "cell_type": "markdown",
