--- a/Instructions/HeroesOfPymoli/HW.ipynb
+++ b/Instructions/HeroesOfPymoli/HW.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
        "0            576"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
        "4                                       Fury   1.44  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
        "0                     179         $3.05                  780     $2,379.77"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +382,7 @@
        "Other / Non-Disclosed           11                 1.91%"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 71,
    "metadata": {
     "scrolled": false
    },
@@ -502,7 +502,7 @@
        "Other / Non-Disclosed               $50.19                         $4.56  "
       ]
      },
-     "execution_count": 41,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -650,7 +650,7 @@
        "40+             12                 2.08%"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -706,7 +706,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "age_purchasing = purchase_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -819,7 +828,7 @@
        "40+                           $3.19  "
       ]
      },
-     "execution_count": 65,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -881,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -961,7 +970,7 @@
        "Iskadarya95               3                  $4.37               $13.10"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1033,7 +1042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -1136,7 +1145,7 @@
        "108     Extraction, Quickblade Of Trembling Hands                  $31.77  "
       ]
      },
-     "execution_count": 61,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1190,7 +1199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 76,
    "metadata": {
     "scrolled": true
    },
@@ -1295,7 +1304,7 @@
        "103     Singed Scalpel                                             $34.80  "
       ]
      },
-     "execution_count": 64,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1326,7 +1335,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Summary\n",
+    "# 1.) out of the 780 purchases, Male at 84.03% and female at 14.06%.\n",
+    "# it is clear that male dominated the purchases of games over females and males purchased $1,967.64 worth of games.\n",
+    "\n",
+    "# 2.) out of the 576 total players 44.79% were in the age group of 20-24 years of age.\n",
+    "\n",
+    "# 3.) It is clear that 'Final Critic' is the most profitable and also the most popular item on the gaming market as it was purchased 13 times and the game cost $59.99. "
+   ]
   }
  ],
  "metadata": {
